# barklog

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
scripts/: gen_logs.sh
src/: app.rs  config.rs  discovery.rs  filter.rs  input.rs  main.rs  theme.rs  ui.rs
src/sources/: docker.rs  file.rs  k8s.rs  manager.rs  mod.rs  ssh.rs
