[package]
name = "bark"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A lazygit style Rust TUI for exploring logs from files and containers in real time"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
regex = "1"
ansi-to-tui = "7"
async-trait = "0.1"
tui-textarea = "0.7"
chrono = "0.4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
